--- a/trunk/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/trunk/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -4,7 +4,7 @@ DOCHDRS		 	= 			\
 Domain.h					\
 Cells.h Polc.h \
 Node.h Function.h Function1.h Function2.h \
-Parm.h ParmPolc.h ParmPolcStored.h \
+Parm.h \
 Add.h Subtract.h Multiply.h Divide.h \
 Sin.h Cos.h Exp.h Pow.h Sqr.h Sqrt.h Conj.h ToComplex.h \
 UVW.h \
@@ -21,7 +21,7 @@ libmeq_la_SOURCES 	= $(DOCHDRS)		\
 Domain.cc					\
 Cells.cc Polc.cc \
 Node.cc Function.cc Function1.cc Function2.cc \
-Parm.cc ParmPolc.cc ParmPolcStored.cc \
+Parm.cc \
 Add.cc Subtract.cc Multiply.cc Divide.cc \
 Sin.cc Cos.cc Exp.cc Pow.cc Sqr.cc Sqrt.cc Conj.cc ToComplex.cc \
 UVW.cc \
