--- a/trunk/CEP/CPA/OCTOPUSSY/test/Makefile.am
+++ b/trunk/CEP/CPA/OCTOPUSSY/test/Makefile.am
@@ -1,5 +1,7 @@
 CXXFLAGS += -D_GNU_SOURCE 
 
+DOCHDRS = EchoWP.h
+
 dmi_dir = $(lofar_sharedir)/../DMI
 
 check_PROGRAMS		= test_octopussy test_gw test_gw0 test_ping
@@ -34,16 +36,5 @@ TESTS				=  test_octopussy
 
 EXTRA_DIST			=
 
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/test
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h
-
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
