--- a/trunk/CEP/CPA/OCTOGlish/src/Makefile.am
+++ b/trunk/CEP/CPA/OCTOGlish/src/Makefile.am
@@ -1,8 +1,8 @@
-dmi_dir = $(lofar_sharedir)/../DMI
-
 CXXFLAGS += -Wall -Wno-unknown-pragmas -Wno-deprecated -D_GNU_SOURCE
 
 lib_LTLIBRARIES = liboctoglish.la
+
+DOCHDRS = GlishClientWP.h GlishUtil.h
 
 liboctoglish_la_SOURCES = GlishClientWP.cc GlishUtil.cc AID-OCTOGlish-Registry.cc
 
@@ -11,32 +11,11 @@ bin_PROGRAMS   		= octoglish
 octoglish_SOURCES 	= octoglish.cc 
 
 octoglish_LDADD		= liboctoglish.la 
-# -lglish -lsos -lnpd
   
-#  ../../test/AID-Testing-Registry.o 
-
 octoglish_DEPENDENCIES	= liboctoglish.la $(LOFAR_DEPEND)
-
-#  ../../test/AID-Testing-Registry.o 
 
 glishdir = $(libexecdir)/glish
 dist_glish_SCRIPTS = octopussy.g
   
-
-
-include $(lofar_sharedir)/Makefile.common
-
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/src
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
- 
-
+include $(lofar_sharedir)/Makefile.aids
 include $(lofar_sharedir)/Makefile.common
