--- a/trunk/CEP/CPA/OCTOGlish/test/Makefile.am
+++ b/trunk/CEP/CPA/OCTOGlish/test/Makefile.am
@@ -1,12 +1,10 @@
-dmi_dir = $(lofar_sharedir)/../DMI
-
-
-
 CXXFLAGS += -D_GNU_SOURCE 
 
 check_PROGRAMS		= IMTest glish_reflector
 
 bin_PROGRAMS   		= 
+
+AIDHDRS = IMTestWP.h
 
 # test_glish_SOURCES 	= test_glish.cc EchoWP.cc AID-Testing-Registry.cc
 #
@@ -27,16 +25,5 @@ TESTS				=
 
 EXTRA_DIST			=
 
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/test
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h
-
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
