--- a/trunk/CEP/CPA/AppAgent/Solver/src/Makefile.am
+++ b/trunk/CEP/CPA/AppAgent/Solver/src/Makefile.am
@@ -2,6 +2,11 @@ dmi_dir = $(lofar_sharedir)/../DMI
 
 lib_LTLIBRARIES = libsolver.la
 
+DOCHDRS = \
+  BatchAgent.h   MeqCalSolver.h        \
+  BaseSolver.h  DummySolver.h  \
+  SolverControlAgent.h  TypeIter-Solver.h
+
 libsolver_la_SOURCES = \
   AID-Solver-Registry.cc \
   BaseSolver.cc \
@@ -19,19 +24,6 @@ applauncher_DEPENDENCIES	= libsolver.la $(LOFAR_DEPEND)
 glishdir = $(libexecdir)/glish/pss3
 dist_glish_SCRIPTS = glishsolver.g
 
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/src
-
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
- 
-
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
 
