--- a/trunk/CEP/CPA/PSS4/MeqGen/src/Makefile.am
+++ b/trunk/CEP/CPA/PSS4/MeqGen/src/Makefile.am
@@ -1,11 +1,21 @@
 SUBDIRS	= .
 
-DOCHDRS		 	= 			compare.h
-
 lib_LTLIBRARIES 	= libmeqgen.la
 
-libmeqgen_la_SOURCES 	= $(DOCHDRS)		\
-compare.cc					\
+DOCHDRS = \
+  meqFlagger.h \
+  meqCopy.h \
+  meqCompare.h \
+  meqDFT_GVD.h \
+  meqShiftPhaseCentre.h 
+
+libmeqgen_la_SOURCES 	= $(DOCHDRS)  \
+meqFlagger.cc \
+meqCopy.cc \
+meqCompare.cc \
+meqDFT_GVD.cc \
+meqShiftPhaseCentre.cc \
 AID-MeqGen-Registry.cc
 
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
