--- a/trunk/CEP/CPA/AppAgent/VisAgent/src/Makefile.am
+++ b/trunk/CEP/CPA/AppAgent/VisAgent/src/Makefile.am
@@ -1,5 +1,7 @@
 lib_LTLIBRARIES = libvisagent.la
 
+AIDHDRS = VisAgentVocabulary.h
+
 DOCHDRS = DataStreamMap.h InputAgent.h OutputAgent.h 
 
 libvisagent_la_SOURCES = AID-VisAgent-Registry.cc \
