--- a/trunk/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/trunk/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS	= .
 DOCHDRS		 	= MeqVocabulary.h \
 Domain.h Cells.h Vells.h VellSet.h Result.h Polc.h \
 Node.h Function.h Function1.h Function2.h \
-Parm.h Freq.h Time.h Selector.h Composer.h \
+Constant.h Parm.h Freq.h Time.h Selector.h Composer.h \
 Add.h Subtract.h Multiply.h Divide.h \
 Sin.h Cos.h Exp.h Pow.h Sqr.h Sqrt.h Conj.h ToComplex.h \
 UVW.h Request.h \
@@ -15,7 +15,7 @@ lib_LTLIBRARIES 	= libmeq.la
 libmeq_la_SOURCES 	= $(DOCHDRS)		\
 Domain.cc	Cells.cc Vells.cc VellSet.cc Result.cc Polc.cc \
 Node.cc Function.cc Function1.cc Function2.cc \
-Parm.cc Freq.cc Time.cc Selector.cc Composer.cc \
+Constant.cc Parm.cc Freq.cc Time.cc Selector.cc Composer.cc \
 Add.cc Subtract.cc Multiply.cc Divide.cc \
 Sin.cc Cos.cc Exp.cc Pow.cc Sqr.cc Sqrt.cc Conj.cc ToComplex.cc \
 UVW.cc Request.cc \
