--- a/trunk/LCS/databases/PL/src/Makefile.am
+++ b/trunk/LCS/databases/PL/src/Makefile.am
@@ -1,4 +1,5 @@
 INSTHDRS = \
+	Attrib.h \
 	Collection.h \
 	ConnectionHandler.h \
 	DTLBase.h \
@@ -16,6 +17,8 @@ INSTHDRS = \
 	Query/Expr.h \
 	Query/ExprNode.h \
 	Query/FunctionExprNode.h \
+	Query/LogicalBinaryExprNode.h \
+	Query/LogicalUnaryExprNode.h \
 	Query/SQLExprNode.h \
 	Query/UnaryExprNode.h
 
@@ -33,15 +36,20 @@ lib_LTLIBRARIES = \
 	libpl.la
 
 libpl_la_SOURCES = $(DOCHDRS) \
+	Attrib.cc \
 	ConnectionHandler.cc \
 	ObjectCache.cc \
 	ObjectId.cc \
+	Query.cc \
 	PersistenceBroker.cc \
 	PersistentObject.cc \
 	Query/BinaryExprNode.cc \
 	Query/ColumnExprNode.cc \
 	Query/ConstExprNode.cc \
 	Query/Expr.cc \
+	Query/ExprNode.cc \
+	Query/LogicalBinaryExprNode.cc \
+	Query/LogicalUnaryExprNode.cc \
 	Query/SQLExprNode.cc \
 	Query/UnaryExprNode.cc
 
