--- a/trunk/LCS/databases/PL/test/Makefile.am
+++ b/trunk/LCS/databases/PL/test/Makefile.am
@@ -1,9 +1,17 @@
-check_PROGRAMS		= tA \
-			  tC \
-			  tTPO
+check_PROGRAMS		= \
+			  tFooBar \
+			  tExpr \
+			  tAttrib \
+			  tA \
+			  tC
+#			  tTPO
 #			  tCollection	\
 #			  tObjectId
 #			  tSQLTimeStamp
+
+tFooBar_SOURCES		= tFooBar.cc
+tFooBar_LDADD		= ../src/libpl.la
+tFooBar_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
 tA_SOURCES              = tA.cc
 tA_LDADD		= ../src/libpl.la
@@ -13,9 +21,17 @@ tC_SOURCES              = tC.cc
 tC_LDADD		= ../src/libpl.la
 tC_DEPENDENCIES		= ../src/libpl.la $(LOFAR_DEPEND)
 
-tTPO_SOURCES		= tTPO.cc
-tTPO_LDADD		= ../src/libpl.la
-tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+#tTPO_SOURCES		= tTPO.cc
+#tTPO_LDADD		= ../src/libpl.la
+#tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+
+tExpr_SOURCES		= tExpr.cc
+tExpr_LDADD		= ../src/libpl.la
+tExpr_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+
+tAttrib_SOURCES		= tAttrib.cc
+tAttrib_LDADD		= ../src/libpl.la
+tAttrib_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
 #tCollection_SOURCES	= tCollection.cc
 #tCollection_LDADD	= ../src/libpl.la
@@ -37,8 +53,6 @@ tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 #SQLTimeStampCxxTest_SOURCES = \
 #			  SQLTimeStampCxxTest.hh \
 #			  SQLTimeStampCxxTest.cc
-
-CXXFLAGS		+= -Wno-unused-parameter
 
 #TESTS			= tSQLTimeStamp.sh
 
