--- a/CEP/CPA/PSS4/MEQ/configure.in
+++ b/CEP/CPA/PSS4/MEQ/configure.in
@@ -57,7 +57,7 @@ lofar_AIPSPP(1)
 lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
-lofar_EXTERNAL(blitz,1,blitz/blitz.h)
+lofar_BLITZ(1)
 lofar_PACKAGE(LCS/Common)
 lofar_PACKAGE(DMI)
 dnl lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
