--- a/trunk/LCS/databases/PL/test/Makefile.am
+++ b/trunk/LCS/databases/PL/test/Makefile.am
@@ -3,10 +3,10 @@ check_PROGRAMS		= \
 			  tExpr \
 			  tAttrib \
 			  tA \
-			  tC
-#			  tTPO
-#			  tCollection	\
-#			  tObjectId
+			  tC \
+			  tTPO \
+			  tCollection	\
+			  tObjectId
 #			  tSQLTimeStamp
 
 tFooBar_SOURCES		= tFooBar.cc
@@ -21,9 +21,9 @@ tC_SOURCES              = tC.cc
 tC_LDADD		= ../src/libpl.la
 tC_DEPENDENCIES		= ../src/libpl.la $(LOFAR_DEPEND)
 
-#tTPO_SOURCES		= tTPO.cc
-#tTPO_LDADD		= ../src/libpl.la
-#tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+tTPO_SOURCES		= tTPO.cc
+tTPO_LDADD		= ../src/libpl.la
+tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
 tExpr_SOURCES		= tExpr.cc
 tExpr_LDADD		= ../src/libpl.la
@@ -33,18 +33,13 @@ tAttrib_SOURCES		= tAttrib.cc
 tAttrib_LDADD		= ../src/libpl.la
 tAttrib_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
-#tCollection_SOURCES	= tCollection.cc
-#tCollection_LDADD	= ../src/libpl.la
-#tCollection_DEPENDENCIES= ../src/libpl.la $(LOFAR_DEPEND)
+tCollection_SOURCES	= tCollection.cc
+tCollection_LDADD	= ../src/libpl.la
+tCollection_DEPENDENCIES= ../src/libpl.la $(LOFAR_DEPEND)
 
-#tObjectId_SOURCES	= tObjectId.cc
-#tObjectId_LDADD		= ../src/libpl.la
-#tObjectId_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
-
-#myClass_SOURCES		= myClass.cc \
-#			  MeqParm.cc
-#myClass_LDADD		= ../src/libpl.la
-#myClass_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+tObjectId_SOURCES	= tObjectId.cc
+tObjectId_LDADD		= ../src/libpl.la
+tObjectId_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
 #tSQLTimeStamp_SOURCES	= SQLTimeStampTest.cc	\
 #			  SQLTimeStampTest.h	\
