--- a/trunk/LCS/databases/PL/configure.in
+++ b/trunk/LCS/databases/PL/configure.in
@@ -55,12 +55,12 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(LCS/Common)
 # Need explicit /usr, because /usr/local/lib/libodbc.so is broken on dop48
-lofar_EXTERNAL(odbc,1,sql.h,,"/usr")
+lofar_EXTERNAL(odbc,1,sql.h)
 lofar_EXTERNAL(boost,1,boost/shared_ptr.hpp,"")
 lofar_EXTERNAL(dtl,1,dtl/DTL.h,,,,"gnu3:-Wno-unused-parameter")
 #lofar_EXTERNAL(cppunit,0,cppunit/Test.h,,$HOME/linux/usr/local/+pkg/+comp)
 #lofar_EXTERNAL(cxxtest,0,cxxtest/SelfTest.h,"",$HOME/linux/usr/local)
-lofar_EXTERNAL(loki,1,loki/LokiTypeInfo.h,"")
+#lofar_EXTERNAL(loki,1,loki/LokiTypeInfo.h,"")
 
 dnl
 dnl Output Makefiles
