--- a/LCS/databases/PL/test/Makefile.am
+++ b/LCS/databases/PL/test/Makefile.am
@@ -50,7 +50,8 @@ tObjectId_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 #			  SQLTimeStampCxxTest.cc
 
 TESTS			= \
-			  tExpr.sh
+			  tExpr.sh \
+			  tAttrib.sh
 #			  tSQLTimeStamp.sh
 
 TESTS_ENVIRONMENT	= lofar_sharedir=$(lofar_sharedir)
