--- a/trunk/MAC/APL/PAC/BeamServer/configure.in
+++ b/trunk/MAC/APL/PAC/BeamServer/configure.in
@@ -53,9 +53,9 @@ dnl
 lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
-dnl lofar_EXTERNAL(common,1,Common/LofarTypes.h,,~/workspace3/LOFAR/installed/gnu_debug)
-lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,~/workspace3/LOFAR/installed/gnu_debug)
+dnl lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,)
 lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,,)
+lofar_EXTERNAL(common,1,Common/LofarTypes.h,,)
 
 dnl
 dnl Output Makefiles
