--- a/MAC/Config/log4cplus.properties
+++ b/MAC/Config/log4cplus.properties
@@ -14,6 +14,9 @@ log4cplus.appender.STDOUT=log4cplus::ConsoleAppender
 log4cplus.appender.STDOUT.layout=log4cplus::PatternLayout
 log4cplus.appender.STDOUT.layout.ConversionPattern=%d{%d-%m-%y %H:%M:%S} %-5p %c{2} - %m [%l]%n
 
+log4cplus.additivity.MAC=FALSE
+log4cplus.logger.MAC=TRACE, STDOUT
+
 log4cplus.appender.EXAMPLEROLFILE=log4cplus::RollingFileAppender
 log4cplus.appender.EXAMPLEROLFILE.File=output_${ENV_VAR}.log
 log4cplus.appender.EXAMPLEROLFILE.MaxFileSize=5MB
